[package]
name = "commit-timer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"
soloud = "1"
timer = "0.2.0"
chrono = "0.4.0"
tokio = { version = "1.0", features = ["full"] }
termion = "2"