[package]
name = "diffding"
version = "0.1.3"
edition = "2021"
authors = ["Trevor Coleman <trevor@trevorcoleman.design>"]
repository = "https://github.com/trevor-coleman/diffding"
description = "Gentle reminders to commit when inserts/deletes cross a threshold"
license = "CC-BY-ND-4.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"
soloud = "1"
timer = "0.2.0"
chrono = "0.4.0"
tokio = { version = "1.0", features = ["full"] }
termion = "2"
config = "0.13.2"