[package]
name = "diffding"
version = "0.2.3"
edition = "2021"
authors = ["Trevor Coleman <trevor@trevorcoleman.design>"]
repository = "https://github.com/trevor-coleman/diffding"
description = "Gentle reminders to commit when inserts/deletes cross a threshold"
license = "CC-BY-ND-4.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"
soloud = "1"
timer = "0.2.0"
chrono = "0.4.0"
config = "0.13.2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.148"
crossterm = { version = "0.25.0", features = ["event-stream", "serde"] }
tokio = { version = "1.16", features = ["full"] }
futures = "0.3"
futures-timer = "3.0"
tui = "0.19.0"
cfonts = "1.1.0"
clap = { version = "4.0.29", features = ["derive"] }
signal-hook = "0.3.1"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
tokio-util = "0.6.9"
rgb2ansi256 = "0.1.1"